# Cocai

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  README.zh-TW.md  config.toml  justfile  pyproject.toml
.chainlit/: config.toml
.github/: copilot-instructions.md
docs/: configuration.md
game_modules/: README.md
patches/: mem0-openai-embedder-dimensions-param.md
public/: play.html  play.js
public/dice/: dice.js
src/: config.py  dice.jinja  main.py  server.py  utils.py
src/agentic_tools/: __init__.py  create_character.py  misc.py  roll_dices.py
src/async_panes/: history.py  scene.py
tests/: conftest.py  test_async_panes_utils.py  test_config.py  test_history_and_scene_helpers.py  test_llm_integration.py
