[project]
name = "cocai"
version = "0.1.0"
description = "A chatbot that plays Call of Cthulhu (CoC) with you, powered by AI."
readme = "README.md"
# numba 0.61+ supports Python 3.10-3.15; no upper bound needed.
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "chainlit>=2.9.6",
    "chromadb>=0.6.0",
    "cochar>=1.0.1",
    "llama-index-agent-openai>=0.3.0",
    "llama-index-core>=0.10.43",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai-like>=0.2.0",
    "llama-index-tools-tavily-research>=0.2.0",
    "rich>=13.8.0",
    "ruff>=0.6.3",
    "tomlkit>=0.13.2",
    "llama-index>=0.11.17",
    "llama-index-memory-mem0>=0.2.1",
    "jinja2>=3.1.5",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-utils-workflow>=0.3.5",
    "sse-starlette>=1.8.1",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
cache-dir = ".cache/ruff"
